packages/query/src/loader/typescript/grammar/QueryParser.g4
parser grammar QueryParser;

options { tokenVocab = QueryLexer; }

input
    : query EOF_STATEMENT? EOF
    ;

query
    : ignored+ (param ignored*)*
    ;

param
    : pickParam
    | arrayPickParam
    | scalarParam
    | arrayParam
    ;

ignored: (ID | WORD | STRING | COMMA | OB | CB | SPECIAL | REQUIRED_MARK)+;

scalarParam: SINGULAR_PARAM_MARK scalarParamName;

scalarParamName: ID REQUIRED_MARK?;

pickParam: SINGULAR_PARAM_MARK paramName OB pickKey (COMMA pickKey)* COMMA? CB;

arrayPickParam: PLURAL_PARAM_MARK paramName OB pickKey (COMMA pickKey)* COMMA? CB;

arrayParam: PLURAL_PARAM_MARK paramName;

paramName: ID;

pickKey: ID REQUIRED_MARK?;
